# xbook

./: README.md  pyproject.toml
.github/workflows/: pages.yml
doc/: .jupyterlite.doit.db  conf.py  index.md
doc/_contents/: 2e2fcb57_6216_44fd_991e_490d4234074e.ipynb  4365c89e_e263_4c17_8d0e_77dceeec5368.ipynb  a5585116_c925_458f_8882_284f6208eb70.ipynb  eaed9305_b06f_41d8_949e_5eb688c61bec.ipynb
doc/_static/: switcher.json
doc/topics/: index.md
doc/tutorials/: index.md
doc/tutorials/jupyterlite-sphinx/usages/directives/: index.md
doc/tutorials/jupyterlite/quickstart/: configure.md
src/xbook/: __init__.py
tests/: conf.py  test.ipynb
