[project]
name = "xbook"
version = "0.0.2"
description = "道法自然"
authors = [
    {name = "xinetzone", email = "735613050@qq.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]
dependencies = [
  "taolib",
]

[project.urls]
Home = "https://github.com/xinetzone/xbook"

[project.optional-dependencies]
doc = [
  "myst-nb",
  "xyzstyle",
  "sphinx-copybutton",
  "sphinxcontrib-bibtex",
  "sphinx-thebe",
  "sphinx-design",
  "sphinx-automodapi",
  "sphinx-sitemap",
  "sphinx-comments",
  "invoke",
  "sphinx-autoapi",
]

dev = [
  "pdm",
]

gui = [
  "PySide6",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
